[package]
name = "qmk-nowplaying"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qmk-oled-api = { path = "../qmk-oled-api/" }
tempfile = "3.3.0"
mpris = "2.0.0-rc2"
serde = { version = "1.0.141", features = ["derive"] }
hidapi = { version = "1.4.1", default-features = false, features = ["linux-static-hidraw"]}
reqwest = { version = "0.11.11", features = ["blocking"] }
image-convert = "0.12.0"
